# pcc-lid

./: .gitignore  Automatic Language Identification - v1.ipynb  Automatic Language Identification.ipynb  README.md  pyproject.toml  pyproject.toml.bak  visualizations.py
data/pth_checkpoints/20-08-2019-17:37:39/: epoch_1.pth  epoch_10.pth  epoch_10_full.pth  epoch_1_full.pth  epoch_2.pth  epoch_2_full.pth  epoch_3.pth  epoch_3_full.pth  epoch_4.pth  epoch_4_full.pth  epoch_5.pth  epoch_5_full.pth  epoch_6.pth  epoch_6_full.pth  epoch_7.pth  epoch_7_full.pth  epoch_8.pth  epoch_8_full.pth  epoch_9.pth  epoch_9_full.pth
data/pth_checkpoints/AUC_091_LOW_GERMAN/: epoch_10.pth  epoch_10_full.pth
