[tool.poetry]
name = "tcc"
version = "0.1.0"
description = ""
authors = ["Martin <martin@hotmail.com.br>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.0"
scikit-learn = "^0.21.3"
librosa = "^0.7.0"
fastai = "^1.0"
opencv-python = "^4.1"
visdom = "^0.1.8"
torchvision = "^0.3.0"
matplotlib = "^3.0.3"
jupyter = "^1.0"
lxml = "^4.4"
beautifulsoup4 = "^4.8"
torchsummary = "^1.5"

[tool.poetry.dev-dependencies]
ipython = "^7.7"
autopep8 = "^1.4"
isort = "^4.3"
yapf = "^0.28.0"
flake8 = "^3.7"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
